--- a/catalog/view/theme/default/stylesheet/cloud-zoom.css
+++ b/catalog/view/theme/default/stylesheet/cloud-zoom.css
@@ -24,7 +24,7 @@
 /* This is the zoom window. */
 .cloud-zoom-big {
 	border:4px solid #ccc;
-	overflow:hidden;
+	overflow:hidden !important;
 /*        width: 400px !important;
         height: 300px !important;*/
 }
