--- a/catalog/view/theme/squareofone/stylesheet/stylesheet.css
+++ b/catalog/view/theme/squareofone/stylesheet/stylesheet.css
@@ -49,7 +49,7 @@ form {
 	display: inline;
 }
 input[type='text'], input[type='password'], textarea {
-	background: #F8F8F8;
+	background: #F8F8F8;b
 	border: 1px solid #CCCCCC;
 	padding: 3px;
 	margin-left: 0px;
@@ -65,7 +65,7 @@ label {
 }
 /* layout */
 #container {
-	width: 980px;
+/*	width: 980px;*/
 	margin-left: auto;
 	margin-right: auto;
 	text-align: left;
@@ -632,7 +632,9 @@ a.button:hover, input.button:hover {
 }
 /* box */
 .box {
-	margin-bottom: 20px;
+	margin-bottom: 20px !important;
+        width: 980px !important;
+        margin: 0 auto;
 }
 .box .box-heading {
 	-webkit-border-radius: 7px 7px 0px 0px;
@@ -647,6 +649,7 @@ a.button:hover, input.button:hover {
 	font-weight: bold;
 	line-height: 14px;
 	color: #333;
+        width: 980px;
 }
 .box .box-content {
 	background: #FFFFFF;
@@ -658,10 +661,11 @@ a.button:hover, input.button:hover {
 	border-right: 1px solid #DBDEE1;
 	border-bottom: 1px solid #DBDEE1;
 	padding: 10px;
+        width: 980px;
 }
 /* box products */
 .box-product {
-	width: 100%;
+	width: 980px;
 	overflow: auto;
 }
 .box-product > div {
