--- a/catalog/view/theme/squareofone/stylesheet/style.css
+++ b/catalog/view/theme/squareofone/stylesheet/style.css
@@ -228,7 +228,7 @@ text-decoration:none;
 }*/
 #banner {
 	margin:0;
-	padding:0;
+	padding:0 0 20px 0;
 /*	width:100%;*/
 	text-align:center;
 	overflow:hidden!important;
