Fixed category page

--- a/catalog/view/theme/squareofone/stylesheet/stylesheet.css
+++ b/catalog/view/theme/squareofone/stylesheet/stylesheet.css
@@ -328,7 +328,7 @@ label {
 
     overflow: hidden !important;
 
-    width: 1280px;
+    width: 800px;
 
 }
 
@@ -338,7 +338,7 @@ label {
 
 
 
-    margin-left: 195px;
+/*    margin-left: 195px;*/
 
 
 
@@ -2538,7 +2538,7 @@ a.button:hover, input.button:hover {
 
 
 
-    width: 1002px !important;
+    width: 30px !important;
 
 
 
@@ -2606,7 +2606,7 @@ a.button:hover, input.button:hover {
 
 
 
-    width: 1002px;
+    width: 200px;
 
 
 
@@ -2670,7 +2670,7 @@ a.button:hover, input.button:hover {
 
 
 
-    width: 1002px;
+    width: 200px;
 
 
 
