Added product zoom, updated language file, product, contacts file

--- a/catalog/view/theme/squareofone/stylesheet/alice-min.css
+++ b/catalog/view/theme/squareofone/stylesheet/alice-min.css
@@ -24452,21 +24452,21 @@ a.underline_hide:hover {
 
 
 
-    background:#6bba70!important;
+    background:url('../image/drop-bg.jpg') repeat-x center top #46934b!important;
 	
-	width:700px;
+	width:720px;
 
 
 
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #3a853d;
 
 
 
-    border-left: 1px solid #000;
+    border-left: 1px solid #3a853d;
 
 
 
-    border-right: 1px solid #000;
+    border-right: 1px solid #3a853d;
 
 
 
